--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -16,6 +16,7 @@
     "dev": "cross-env NODE_ENV=development tsx watch src/index.ts",
     "start": "cross-env NODE_ENV=production tsx src/index.ts",
     "build": "tsc -p tsconfig.build.json",
+    "auth:generate": "pnpm dlx @better-auth/cli@latest generate --config=./src/libs/auth.ts --output=./src/db/schema/auth.ts --y",
     "drizzle:generate": "drizzle-kit generate --config=drizzle.config.ts",
     "drizzle:migrate": "drizzle-kit migrate --config=drizzle.config.ts",
     "drizzle:migrate:local": "drizzle-kit migrate --config=drizzle.studio.config.ts",
@@ -23,20 +24,16 @@
     "drizzle:push:local": "drizzle-kit push --config=drizzle.studio.config.ts",
     "drizzle:introspect": "drizzle-kit introspect --config=drizzle.config.ts",
     "drizzle:studio": "drizzle-kit studio --config=drizzle.studio.config.ts",
-    "reset-credential": "tsx src/db/users.ts --reset-credentials",
     "tsc": "tsc",
     "cli": "tsx src/cli.ts"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.0.11",
-    "@hono/node-server": "^1.13.2",
-    "@hono/node-ws": "^1.0.4",
+    "@hono/node-server": "^1.13.7",
+    "@hono/node-ws": "^1.0.5",
     "@hono/swagger-ui": "^0.4.1",
     "@hono/zod-openapi": "^0.18.0",
-    "@hono/zod-validator": "^0.4.1",
-    "@lucia-auth/adapter-drizzle": "^1.1.0",
-    "@lucia-auth/adapter-postgresql": "^3.1.2",
-    "@lucia-auth/adapter-sqlite": "^3.0.2",
+    "@hono/zod-validator": "^0.4.2",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.50.2",
     "@opentelemetry/auto-instrumentations-web": "^0.41.0",
@@ -53,51 +50,51 @@
     "@opentelemetry/sdk-trace-node": "^1.26.0",
     "@opentelemetry/sdk-trace-web": "^1.26.0",
     "@opentelemetry/semantic-conventions": "^1.27.0",
-    "@sentry/node": "^8.34.0",
+    "@sentry/node": "^8.47.0",
     "ai": "^4.0.22",
     "argon2": "^0.41.1",
-    "blockly": "^11.1.1",
+    "better-auth": "catalog:",
+    "blockly": "catalog:",
     "commander": "^12.1.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
-    "dotenv": "^16.4.5",
-    "drizzle-kit": "^0.23.2",
-    "drizzle-orm": "^0.32.2",
+    "dotenv": "catalog:",
+    "drizzle-kit": "catalog:",
+    "drizzle-orm": "catalog:",
     "drizzle-zod": "^0.6.0",
     "extensions": "workspace:^",
     "fast-glob": "^3.3.2",
     "fluent-ffmpeg": "^2.1.3",
     "get-port": "^7.1.0",
-    "hono": "^4.6.5",
+    "hono": "catalog:",
     "http-proxy": "^1.18.1",
     "http-proxy-middleware": "^3.0.3",
-    "idb": "^8.0.0",
-    "inquirer": "^12.0.0",
+    "inquirer": "^12.3.0",
     "js-yaml": "^4.1.0",
     "kuromoji": "^0.1.2",
-    "lucia": "^3.2.1",
     "nanoid": "^5.0.9",
     "openai": "^4.77.0",
-    "pg": "^8.13.0",
+    "pg": "^8.13.1",
     "rehype-raw": "^7.0.0",
-    "rfc6902": "^5.1.1",
-    "socket.io": "^4.8.0",
+    "rfc6902": "catalog:",
+    "socket.io": "^4.8.1",
     "tiny-worker": "^2.3.0",
-    "tsx": "^4.19.1",
+    "tsx": "catalog:",
     "uuid": "^9.0.1",
-    "zod": "^3.23.8",
-    "zod-to-json-schema": "^3.23.5"
+    "uuidv7": "^1.0.2",
+    "zod": "catalog:",
+    "zod-to-json-schema": "^3.24.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
-    "@types/fluent-ffmpeg": "^2.1.26",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/http-proxy": "^1.17.15",
     "@types/js-yaml": "^4.0.9",
     "@types/kuromoji": "^0.1.3",
-    "@types/node": "^20.16.12",
+    "@types/node": "catalog:",
     "@types/pg": "^8.11.10",
     "@types/uuid": "^9.0.8",
-    "typescript": "^5.6.3"
+    "typescript": "catalog:"
   },
   "packageManager": "pnpm@9.14.4+sha512.c8180b3fbe4e4bca02c94234717896b5529740a6cbadf19fa78254270403ea2f27d4e1d46a08a0f56c89b63dc8ebfd3ee53326da720273794e6200fcf0d184ab"
 }
