--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -13,22 +13,7 @@
     "@blockly/field-grid-dropdown": "^5.0.9",
     "@blockly/field-slider": "^7.0.9",
     "@mdxeditor/editor": "^3.14.0",
-    "@opentelemetry/api": "^1.9.0",
-    "@opentelemetry/auto-instrumentations-node": "^0.50.2",
-    "@opentelemetry/auto-instrumentations-web": "^0.41.0",
-    "@opentelemetry/context-zone": "^1.26.0",
-    "@opentelemetry/core": "^1.26.0",
-    "@opentelemetry/exporter-metrics-otlp-proto": "^0.53.0",
-    "@opentelemetry/exporter-trace-otlp-proto": "^0.53.0",
-    "@opentelemetry/instrumentation": "^0.53.0",
-    "@opentelemetry/instrumentation-generic-pool": "^0.39.0",
-    "@opentelemetry/resources": "^1.26.0",
-    "@opentelemetry/sdk-metrics": "^1.26.0",
-    "@opentelemetry/sdk-node": "^0.53.0",
-    "@opentelemetry/sdk-trace-base": "^1.26.0",
-    "@opentelemetry/sdk-trace-node": "^1.26.0",
-    "@opentelemetry/sdk-trace-web": "^1.26.0",
-    "@opentelemetry/semantic-conventions": "^1.27.0",
+
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -52,22 +37,23 @@
     "@xyflow/react": "^12.3.2",
     "autoprefixer": "^10.4.20",
     "backend": "workspace:^",
-    "blockly": "^11.1.1",
+    "better-auth": "catalog:",
+    "blockly": "catalog:",
+    "boring-avatars": "^1.11.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dom-to-image-more": "^3.5.0",
-    "dotenv": "^16.4.5",
-    "drizzle-kit": "^0.23.2",
-    "drizzle-orm": "^0.32.2",
+    "dotenv": "catalog:",
+    "drizzle-kit": "catalog:",
+    "drizzle-orm": "catalog:",
     "extensions": "workspace:^",
     "fast-glob": "^3.3.2",
     "html2canvas": "^1.4.1",
     "i18next": "^23.16.0",
     "i18next-fs-backend": "^2.3.2",
     "idb": "^8.0.0",
-    "inquirer": "^12.0.0",
     "jotai": "^2.10.1",
     "js-yaml": "^4.1.0",
     "kuromoji": "^0.1.2",
@@ -84,7 +70,7 @@
     "react-resizable-panels": "^2.1.4",
     "react-tag-input": "^6.10.3",
     "rehype-raw": "^7.0.0",
-    "rfc6902": "^5.1.1",
+    "rfc6902": "catalog:",
     "socket.io-client": "^4.8.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.14",
@@ -100,12 +86,12 @@
     "@tanstack/router-devtools": "^1.90.0",
     "@tanstack/router-plugin": "^1.87.13",
     "@types/kuromoji": "^0.1.3",
-    "@types/node": "^20.16.12",
+    "@types/node": "catalog:",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/uuid": "^9.0.8",
     "rollup-plugin-visualizer": "^5.12.0",
-    "typescript": "^5.6.3"
+    "typescript": "catalog:"
   },
   "packageManager": "pnpm@9.14.4+sha512.c8180b3fbe4e4bca02c94234717896b5529740a6cbadf19fa78254270403ea2f27d4e1d46a08a0f56c89b63dc8ebfd3ee53326da720273794e6200fcf0d184ab"
 }
