--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,15 @@
 packages:
  - 'apps/*'
  - 'packages/*'
+catalog:
+  better-auth: ^1.1.3
+  blockly: ^11.1.1
+  dotenv: ^16.4.5
+  drizzle-kit: ^0.30.1
+  drizzle-orm: ^0.38.2
+  rfc6902: ^5.1.1
+  tsx: ^4.19.2
+  zod: ^3.23.8
+  "@types/node": ^20.16.12
+  typescript: ^5.6.3
+
